--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 </main>
 	
 	<footer class="end">
-	<div class="fiter"><img src="copy.png" width="20px" height="20px">  All Rights Reserved, ICGM.</div>
+	<div class="fiter"> All Rights Reserved, ICGM.</div>
 </footer>
 
 </body>
