--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 </div>
 
 <footer>
-	<div class="fiter"><img src="copy.png" width="20px" height="20px">  All Rights Reserved, ICGM.</div>
+	<div class="fiter">All Rights Reserved, ICGM.</div>
 </footer>
 
 </body>
