--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     	</div>
     	<div>
     		<p class="unorder">Influence Of Christ Gospel Mission. Inc.</p>
-    		 <p><img src="copy.png" width="20px" height="20px"> All Rights Reserved, ICGM<p>
+    		 <p>All Rights Reserved, ICGM<p>
     	</div>
     </footer>
 	
