--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <style type="text/css">
+	div{
+		margin-left: 12px;
+		margin-right: 12px;
+	}
 	#cont{
 		width: 100%;
 		height: 500px;
