--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <style type="text/css">
+	body{
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+	}
 	#cont{
 		width: 100%;
-		height: 500px;
-		image-resolution: 800dpi;
 	}
 	.fiter{
 			color: white;
