--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <style type="text/css">
-	body{
-		width: 100%;
-		padding-left: 0;
-		padding-right: 0;
+	.pla{
+		overflow-x: hidden;
 	}
 	#cont{
 		width: 100%;
+		height: 500px;
 	}
 	.fiter{
 			color: white;
@@ -59,7 +58,7 @@
 			right: 0;
 		}
 </style>
-<body>
+<body class="pla">
 
 	<div class="container">
 		<div id="overlay"></div>
