--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
 	<h1 class="con-tent about">Our Stand As a Body of Christ</h1>
 
 	<div>
-   <p class="exp"><strong>Influence Of Christ Gospel Mission</strong> is a bible based church, that builds it's principles on the word of God. We represent Christ, that He died, buried and resurrected for the salvation of mankind. The ministry began in 1983, in Delta State, Nigeria. Which was first called Temple of Hope, but in subsequent time as the vision progressed, the it is now called and registered as Influence of Christ Gospel Mission. The ministry has thrived despite the oppositions and persecutions from unbelievers and some members of the church.</p>
+   <p class="exp"><strong>Influence Of Christ Gospel Mission</strong> is a bible based church, that builds it's principles on the word of God. We represent Christ, that He died, buried and resurrected for the salvation of mankind. The ministry began in 1983, in Delta State, Nigeria. Which was first called Temple of Hope, but in subsequent time as the vision progressed, it is now called and registered as Influence of Christ Gospel Mission. The ministry has thrived despite the oppositions and persecutions, and has grown stronger and better over the years.</p>
 
 	<h2>OUR MISSION</h2>
 	<p>Knowing Christ and making Him known</p>
